feat(TCOMP-2367): phase out layerspector for jib (#692)